new pom dep issues fixed